property file added to set config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=Lucky-Round
+spring.application.name=spin-the-wheel
+server.port=4040
+spring.profiles.active=${ACTIVE_PROFILE:dev}
+
+
+# Config
+config.b2c_initiator_identifier_type=1
+config.b2c_initiator_security_credential=ddddasnalwd
+config.b2c_initiator_identifier_short_code=0000
+
