new config added

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 
 ##OAT-DB
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:4343/orders
 spring.datasource.username=postgres
 spring.datasource.password=4432
@@ -10,16 +10,15 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
-
 #G2 Config
-config.g2_sync_url=
-config.g2_caller_type=2
-config.g2_caller_third_party_id=broker_4
-config.g2_caller_password=
-config.g2_initiator_identifier=
-config.g2_initiator_security_credential=
-config.g2_result_url=
-config.g2_initiator_identifier_type=14
+config.sync_url=https://
+config.caller_type=2
+config.caller_third_party_id=broker_4
+config.caller_password=438743
+config.initiator_identifier=1
+config.initiator_security_credential=cajc432
+config.result_url=https://d
+config.initiator_identifier_type=14
 
 #SMS Config
 config.sms_api_url=https://
